feat: add jref! (Java xref via JavaParser) and docs/